--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "postcss": "^8.5.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "sonner": "^2.0.5",
     "swr": "^2.3.3",
